--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -34,6 +34,35 @@
 	color: #868e96;
 }
 
+.ui.fileupload-view {
+
+	.fileupload-view-displayimage {
+		text-align: center;
+		margin-bottom: 10px;
+		border-bottom: 1px #f4f4f4 solid;
+		padding-bottom: 10px;
+	}
+
+	.fileupload-info {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.fileupload-fileinfo {
+		text-align: left;
+	}
+
+	.fileupload-clear {
+		text-align: right;
+	}
+
+}
+
+.ui.fileupload input[type="file"] {
+  display: none;
+}
+
 
 /*
  *   Info table
