Change BlockContent header design

--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -148,3 +148,36 @@
 	}
 
 }
+
+
+/*
+ *   Block content header
+ */
+
+.ui.secondary.segment {
+	.title {
+		h4 {
+			color: #000000;
+		}
+	}
+}
+
+.flask {
+
+	&.blockcontent.header.wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin: -5px 0px;
+
+		.title {
+			text-align: left;
+			flex: 1 1 auto;
+		}
+		.headeritems {
+			text-align: right;
+			flex: 0 0 auto;
+		}
+	}
+
+}
