Refactor Drawer to use Semantic-style class naming

--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -226,7 +226,7 @@ body.overflow-hidden {
   overflow: hidden;
 }
 
-.flask-drawer {
+.ui.drawer {
   display: -ms-flexbox;
   display: flex;
   height: 100vh;
@@ -237,7 +237,7 @@ body.overflow-hidden {
   bottom: 0;
   pointer-events: none;
 
-	.flask-drawer-dimmer {
+	.dimmer {
 		background: rgba(0,0,0, 0.6);
 		position: absolute;
 		top: 0;
@@ -249,7 +249,7 @@ body.overflow-hidden {
 		opacity: 0;
 	}
 
-	.flask-drawer-container {
+	.wrapper {
 		background: #ffffff;
 		box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
 		position: absolute;
@@ -280,7 +280,7 @@ body.overflow-hidden {
 			max-width: calc(100vw - 30px);
 		}
 
-		.flask-drawer-header {
+		.header {
 			padding: 15px 20px;
 			flex: 0 0 auto;
 			font-size: 20px;
@@ -288,12 +288,12 @@ body.overflow-hidden {
 			border-bottom: 1px rgba(34, 36, 38, 0.15) solid;
 		}
 
-		.flask-drawer-content {
+		.content {
 			padding: 20px;
 			flex: 1 1 auto;
 		}
 
-		.flask-drawer-actions {
+		.actions {
 			flex: 0 0 auto;
 			border-top: 1px rgba(34, 36, 38, 0.15) solid;
 			background: #f9fafb;
@@ -304,11 +304,11 @@ body.overflow-hidden {
 	&.visible {
 		pointer-events: all;
 
-		.flask-drawer-container {
+		.wrapper {
 			transform: translateX(0);
 			transition: transform 250ms ease-in-out;
 		}
-		.flask-drawer-dimmer {
+		.dimmer {
 			opacity: 1;
 			transition: opacity 300ms ease-in-out;
 		}
