--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -125,6 +125,24 @@ textarea {
 	margin-top: 1.5rem;
 }
 
+.ui.toolbar.segment {
+	text-align: center;
+	background: #edeff3;
+	margin-bottom: 1.5rem;
+
+	button {
+		margin-right: 0.5rem !important;
+		margin-left: 0.5rem !important;
+	}
+}
+
+.returnlink {
+	margin-top: 1.5rem;
+	text-align: center;
+}
+
+
+
 
 /*
  *   Info table
