--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -100,6 +100,11 @@
 	}
 }
 
+input.strengthmeter {
+	border-bottom-left-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+}
+
 .chooser-modal-searchresult {
 	margin-top: 1.5rem;
 }
